[package]
name = "bevyex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18.0"
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
csv = "1.2.1"
serde = "1.0.160"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[build-dependencies]
embed-resource = "2.1.1"